# Copyright (c) 2017 harlequin
# https://github.com/harlequin/viral
#
# This file is part of viral.
#
# viral is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

bin_PROGRAMS = viral

viral_SOURCES = \
	src/downloads.c\
	src/http_client.c \
	src/log.c \
	src/networks.c \
	src/options.c \
	src/portable.c \
	src/postprocess.c \
	src/rpc.c \
	src/sig.c \
	src/utils.c \
	src/viral.c \
	lib/frozen/frozen.c \
	lib/slre/slre.c \
	lib/mongoose/mongoose.c

